# ESOplantillaNotas

./: .gitignore  CCGG PLANTILLA - RECUv45.xlsx  CCGG PLANTILLA - RECUv6.xlsx  CLAUDE.md  PLAN_DELTA_UX_FP_A_ESO.md  README.md  app-bridge.js  asteroides.html  diario.html  gestor-alumnos.html  gestor-instrumentos.html  gestor-notas.html  gestor-recuperaciones.html  gestor-rraa-criterios.html  gestor-unidades.html  incluir-actividad.html  index.html  informes.html  main.js  package-lock.json  package.json  plantilla CCGG PLANTILLA - RECUv6.xlsx  tmp_out.txt  ux-common.css  ux-common.js  visor-actividades.html  visor-notas.html  visor-unidades.html
.claude/: settings.json
memory/: MEMORY.md  agents.md  feedback_autonomia.md  feedback_excel_rangos_fijos.md  feedback_respuestas_cortas.md  project_arquitectura.md  project_estado.md  project_excel_estructura.md  user_perfil.md
scripts/: bump-version.js  copy-exe.js  prepare-tauri-web.js
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: main.rs
tauri-web/: app-bridge.js  asteroides.html  diario.html  gestor-alumnos.html  gestor-instrumentos.html  gestor-notas.html  gestor-recuperaciones.html  gestor-rraa-criterios.html  gestor-unidades.html  index.html  informes.html  utilidades.html  ux-common.css  ux-common.js  visor-notas.html  visor-unidades.html
test-data/: alumnos.csv  ce_criterios.csv  instrumentos.csv
