[package]
name = "eso-notas-local"
version = "0.1.25"
description = "Aplicacion local para gestionar notas ESO en una plantilla Excel."
authors = ["Sebantonio"]
edition = "2021"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rfd = "0.15"
webbrowser = "1"
calamine = { version = "0.26", features = ["dates"] }
zip = { version = "2", default-features = false, features = ["deflate"] }
regex = "1"
once_cell = "1"
chrono = { version = "0.4", features = ["clock"] }
